GH-1391: Resolved tree flickering. Adjusted icon padding in the tabs.
Closes #1391
Closes #1376

--- a/packages/filesystem/src/browser/style/file-icons.css
+++ b/packages/filesystem/src/browser/style/file-icons.css
@@ -19,5 +19,4 @@
     font-size: calc(var(--theia-content-font-size) * 0.8);
     text-align: center;
     margin-right: 4px;
-    margin-left: 4px; 
 }
